Added bootstrap for styling

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>Camp Grounds</h1>
 <div>
   <% campgrounds.forEach((campground) => { %>
@@ -7,3 +9,5 @@
   </div>
   <% }) %>
 </div>
+
+<% include partials/footer %>
