Added form to add more campsites

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,6 +1,9 @@
 <% include partials/header %>
 
 <h1>Camp Grounds</h1>
+
+<a href="/campgrounds/new">Add New Campground</a>
+
 <div>
   <% campgrounds.forEach((campground) => { %>
   <div>
