--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,11 @@
         <div class="card-body">
           <div class="card-title"><%= campground['name'] %></div>
         </div>
+        <p>
+          <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary"
+            >More Info</a
+          >
+        </p>
       </div>
     </div>
     <% }) %>
