--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,5 +3,6 @@
 <h1><%= campground.name %></h1>
 <img src="<%= campground.image %>" />
 <p><%= campground.description %></p>
-
-<% include partials/footer %>
+<% campground.comments.forEach((comment) => { %>
+<p><strong><%= comment.author %></strong> - <%= comment.text %></p>
+<% }) %> <% include partials/footer %>
