--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,15 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <h1><%= campground.name %></h1>
 <img src="<%= campground.image %>" />
 <p><%= campground.description %></p>
+<p>
+  <a
+    class="btn btn-success "
+    href="/campgrounds/<%= campground._id %>/comments/new"
+    >Add a Comment</a
+  >
+</p>
 <% campground.comments.forEach((comment) => { %>
 <p><strong><%= comment.author %></strong> - <%= comment.text %></p>
-<% }) %> <% include partials/footer %>
+<% }) %> <% include ../partials/footer %>
