--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,15 +10,15 @@
       </div>
     </div>
     <div class="col-md-9">
-      <div class="thumbnail">
+      <div class="thumbnail card">
         <img class="img-responsive" src="<%= campground.image %>" />
         <div class="caption-full">
-          <h4 class="pull-right">$9.00/night</h4>
+          <h4 class="float-right">$9.00/night</h4>
           <h4><a><%= campground.name %></a></h4>
           <p><%= campground.description %></p>
         </div>
       </div>
-      <div class="well">
+      <div class="card card-body bg-light">
         <div class="text-right">
           <a
             class="btn btn-success "
@@ -26,11 +26,20 @@
             >Add a Comment</a
           >
         </div>
+        <hr />
+        <% campground.comments.forEach((comment) => { %>
+        <div class="row">
+          <div class="col-md-12">
+            <strong><%= comment.author %></strong>
+            <span class="float-right">10 days ago</span>
+            <p>
+              <%= comment.text %>
+            </p>
+          </div>
+        </div>
+        <% }) %>
       </div>
     </div>
   </div>
-  <% campground.comments.forEach((comment) => { %>
-  <p><strong><%= comment.author %></strong> - <%= comment.text %></p>
 </div>
-
-<% }) %> <% include ../partials/footer %>
+<% include ../partials/footer %>
