--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,11 +8,14 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
     <title>YelpCamp</title>
   </head>
   <body>
     <nav class="navbar navbar-default navbar-expand-lg">
-      <div class="navbar-header"><a href="/" class="navbar-brand">YelpCamp</a></div>
+      <div class="navbar-header">
+        <a href="/" class="navbar-brand">YelpCamp</a>
+      </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="/">Login</a></li>
